--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,4 @@ APP_URL=http://127.0.0.1
 APP_ENV=development
 NODE_ENV=development
 JWT_SECRET=
-DB_NAME_DEVELOPMENT=
-DB_USERNAME_DEVELOPMENT=
-DB_PASSWORD_DEVELOPMENT=
-DB_NAME_TESTING=
-DB_USERNAME_TESTING=
-DB_PASSWORD_TESTING=
-DB_NAME_PRODUCTION=
-DB_USERNAME_PRODUCTION=
-DB_PASSWORD_PRODUCTION=
+MONGODB_URL=
