--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.24",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "prettier": "^2.0.5",
     "uuid": "^8.2.0",
+    "validator": "^13.1.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
