--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create an API that serves the latest scores of fixtures of matches in a “**Mock Premier League**”",
   "main": "index.js",
   "scripts": {
+    "pretest": "NODE_ENV=test",
     "test": "NODE_PATH=./ NODE_ENV=test jest --coverage  --watch --notify --runInBand --forceExit",
     "start": "node server.js",
     "dev": "nodemon server.js"
