--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,4 @@ APP_URL=http://127.0.0.1
 APP_ENV=development
 NODE_ENV=development
 JWT_SECRET=
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_HOSTNAME=
-MONGO_PORT=
-MONGO_DB=
-MONGO_DB_TEST_URL=
+MONGODB_URL=
