Add session storage with redis

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=evisit_portal
+APP_NAME=sterling-backend
 APP_URL=http://127.0.0.1
 APP_ENV=development
 NODE_ENV=development
@@ -9,3 +9,6 @@ MONGO_HOSTNAME=
 MONGO_PORT=
 MONGO_DB=
 MONGO_DB_TEST_URL=
+SESSION_SECRET=
+REDIS_HOST=
+REDIST_PORT=
