--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-redis": "^5.0.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-winston": "^4.0.3",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
@@ -42,6 +44,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "prettier": "^2.0.5",
+    "redis": "^3.0.2",
     "uuid": "^8.2.0",
     "validator": "^13.1.1",
     "winston": "^3.3.3"
