--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "express-winston": "^4.0.3",
     "http-errors": "^1.8.0",
