Set Up Project for full containerization
Added a  docker compose file that helps with building our appplication
and installing dependencies like redis and mongodb. Make challenges to
varius files that use env variables to help with this.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,7 @@ MONGO_PASSWORD=
 MONGO_HOSTNAME=
 MONGO_PORT=
 MONGO_DB=
-MONGO_DB_TEST_URL=
-MONGO_DB_TEST_URL2=
+MONGO_DB_TEST=
 SESSION_SECRET=
 REDIS_HOST=
-REDIST_PORT=
+REDIS_PORT=
