--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "morgan": "^1.10.0",
     "prettier": "^2.0.5",
     "redis": "^3.0.2",
+    "sinon": "^9.0.2",
     "uuid": "^8.2.0",
     "validator": "^13.1.1",
     "winston": "^3.3.3"
